# kotlin-cpp

./: CMakeLists.txt  README.md  main.c  main.cpp
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/nativeMain/kotlin/: Main.kt
kotlin/src/nativeMain/kotlin/lib/: export.kt  math_op.kt
kotlin/src/nativeMain/kotlin/model/: SearchResult.kt
kotlin/src/nativeMain/kotlin/service/: APIService.kt
